# botify

./: Readme.md
Botify/: apollo-codegen-config.json  gen_code.sh
Botify/Botify/: BotifyApp.swift  ContentView.swift  Network.swift  SongViewModel.swift
Botify/Botify.xcodeproj/: project.pbxproj
Botify/Botify.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Botify/Botify.xcodeproj/project.xcworkspace/xcuserdata/patricklemiuex.xcuserdatad/: UserInterfaceState.xcuserstate
Botify/Botify.xcodeproj/xcuserdata/patricklemiuex.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Botify/Botify.xcodeproj/xcuserdata/patricklemiuex.xcuserdatad/xcschemes/: xcschememanagement.plist
Botify/BotifyApi/: Package.swift
Botify/BotifyApi/Sources/Operations/Queries/: GetSongsQuery.graphql.swift
Botify/BotifyApi/Sources/Schema/: SchemaMetadata.graphql.swift
Botify/BotifyApi/Sources/Schema/Objects/: Song.graphql.swift
Botify/BotifyTests/: BotifyTests.swift
Botify/BotifyUITests/: BotifyUITests.swift  BotifyUITestsLaunchTests.swift
Botify/graphql/: get_songs_query.graphql  schema.graphql
botify_server/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
botify_server/src/: main.rs
