[package]
name = "botify_server"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.37.0 ", features = ["macros", "rt-multi-thread"] }
warp = "0.3.7"
http = "1.1.0"
arangors = "0.5.4"
async-graphql = "7.0.3"
async-graphql-warp = "7.0.3"
futures = "0.3"
hex = "0.4"
regex = "1"
chrono = "0.4.38"
serde = { version = "1.0.199", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0.116"
